<resources>
    <string name="app_name">Candor365</string>
    <string name="first_name">First Name</string>
    <string name="welcome_to_candor">Welcome To Candor</string>
    <string name="name">Name</string>
    <string name="phone">Phone #</string>
    <string name="no_internet_connection">Could not connect to Internet</string>
    <string name="sign_in_cancelled">Signin attempt cancelled</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="sign_out">Sign Out</string>
    <string name="view_schedule">View Schedule</string>
    <string name="backButton">Back</string>
    <string name="add_event">Add Event</string>
    <string name="view_events">View Events</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">Event Date</string>
    <string name="event_description">Event Description</string>
    <string-array name="class_time_array">
        <item>6:30am</item>
        <item>8:30am</item>
        <item>4:30pm</item>
        <item>5:30pm</item>
    </string-array>
    <string-array name="coaches_array">
        <item>Adam</item>
        <item>Jenny</item>
        <item>Chris</item>
        <item>Allie</item>
    </string-array>

</resources>
